# wooly-paint

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: release-build.yml
assets/cursors/: THIRD_PARTY_NOTICES.txt
assets/menu/: THIRD_PARTY_NOTICES.txt
packaging/: install-portable-menu.sh  linux-portable.txt  windows-portable.txt
scripts/: ci-arch-container-build.sh  install-desktop-user.sh  package-linux-release.sh  package-windows-release.sh  valgrind-wooly-paint.sh  valgrind.supp
src/: app.rs  main.rs  menu_icons.rs  palette.rs  selection.rs  settings.rs  state.rs  tool_cursors.rs  updater.rs
src/document/: composite.rs  history.rs  layer.rs  mod.rs
src/tools/: mod.rs
