[package]
name = "wooly-paint"
version = "0.1.1"
edition = "2021"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dependencies]
gtk = { package = "gtk4", version = "0.11", features = ["v4_12"] }
libadwaita = { version = "0.9", features = ["v1_5"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
anyhow = "1.0"
gdk-pixbuf = "0.22"
zip = { version = "2", default-features = false, features = ["deflate"] }
