[package]
name = "wooly-paint"
version = "0.1.3"
edition = "2021"
repository = "https://github.com/Ldcracknell/wooly-paint"

[build-dependencies]
resvg = "0.44"
tiny-skia = "0.11"
usvg = "0.44"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dependencies]
gtk = { package = "gtk4", version = "0.11", features = ["v4_12"] }
libadwaita = { version = "0.9", features = ["v1_5"] }
# Raster import: decode to RGBA via `image` (flat files). ORA stays a separate path (layers + zip).
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif", "bmp"] }
anyhow = "1.0"
gdk-pixbuf = "0.22"
zip = { version = "2", default-features = false, features = ["deflate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2.12", features = ["json"] }
semver = "1"
flate2 = "1"
tar = "0.4"
